# Xero

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  libtool  libxeroconsensus.pc  libxeroconsensus.pc.in  pack_win64.sh
doc/man/: Makefile.am  xero-cli.1  xero-qt.1  xero-tx.1  xero-util.1  xero-wallet.1  xerod.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  blockencodings.h  blockfilter.h  chain.h  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  deploymentinfo.h  deploymentstatus.h  external_signer.h  flatfile.h  hash.h  (+87 more)
src/.deps/: libxero_common_a-base58.Po  libxero_common_a-bech32.Po  libxero_common_a-chainparams.Po  libxero_common_a-coins.Po  libxero_common_a-compressor.Po  libxero_common_a-core_read.Po  libxero_common_a-core_write.Po  libxero_common_a-deploymentinfo.Po  libxero_common_a-external_signer.Po  libxero_common_a-key.Po  libxero_common_a-key_io.Po  libxero_common_a-merkleblock.Po  libxero_common_a-net_permissions.Po  libxero_common_a-net_types.Po  libxero_common_a-netaddress.Po  libxero_common_a-netbase.Po  libxero_common_a-outputtype.Po  libxero_common_a-protocol.Po  libxero_common_a-psbt.Po  libxero_common_a-scheduler.Po  libxero_common_a-warnings.Po  libxero_consensus_a-arith_uint256.Po  libxero_consensus_a-hash.Po  libxero_consensus_a-pubkey.Po  libxero_consensus_a-uint256.Po  libxero_node_a-addrdb.Po  libxero_node_a-addrman.Po  libxero_node_a-banman.Po  libxero_node_a-blockencodings.Po  libxero_node_a-blockfilter.Po  libxero_node_a-chain.Po  libxero_node_a-dbwrapper.Po  libxero_node_a-deploymentstatus.Po  libxero_node_a-flatfile.Po  libxero_node_a-headerssync.Po  libxero_node_a-httprpc.Po  libxero_node_a-httpserver.Po  libxero_node_a-i2p.Po  libxero_node_a-init.Po  libxero_node_a-mapport.Po  (+32 more)
src/.libs/: libxeroconsensus.la  libxeroconsensus.lai
src/bench/: .gitignore  bench.h  bench_xero.cpp  ccoins_caching.cpp  coin_selection.cpp  data.h  verify_script.cpp  wallet_create_tx.cpp
src/common/: bloom.h  init.cpp  init.h  run_command.cpp  run_command.h  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.h
src/config/: stamp-h1  xero-config.h  xero-config.h.in~
src/consensus/: amount.h  consensus.h  libxeroconsensus_la-merkle.lo  libxeroconsensus_la-tx_check.lo  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crc32c/: libcrc32c.la  libcrc32c_sse42.la
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  libxero_crypto_avx2.la  libxero_crypto_avx2_la-sha256_avx2.lo  libxero_crypto_base.la  libxero_crypto_base_la-aes.lo  libxero_crypto_base_la-chacha20.lo  libxero_crypto_base_la-chacha_poly_aead.lo  libxero_crypto_base_la-hkdf_sha256_32.lo  libxero_crypto_base_la-hmac_sha256.lo  libxero_crypto_base_la-hmac_sha512.lo  libxero_crypto_base_la-muhash.lo  libxero_crypto_base_la-poly1305.lo  libxero_crypto_base_la-ripemd160.lo  libxero_crypto_base_la-sha1.lo  libxero_crypto_base_la-sha256.lo  libxero_crypto_base_la-sha256_sse4.lo  libxero_crypto_base_la-sha3.lo  libxero_crypto_base_la-sha512.lo  libxero_crypto_base_la-siphash.lo  libxero_crypto_sse41.la  libxero_crypto_sse41_la-sha256_sse41.lo  libxero_crypto_x86_shani.la  libxero_crypto_x86_shani_la-sha256_x86_shani.lo  libxeroconsensus_la-aes.lo  libxeroconsensus_la-chacha20.lo  libxeroconsensus_la-chacha_poly_aead.lo  libxeroconsensus_la-hkdf_sha256_32.lo  libxeroconsensus_la-hmac_sha256.lo  libxeroconsensus_la-hmac_sha512.lo  libxeroconsensus_la-muhash.lo  libxeroconsensus_la-poly1305.lo  libxeroconsensus_la-ripemd160.lo  libxeroconsensus_la-sha1.lo  (+14 more)
src/index/: base.cpp  base.h  blockfilterindex.h  coinstatsindex.h  disktxpos.h  txindex.h
src/init/: common.cpp  common.h  xero-gui.cpp  xero-node.cpp  xero-qt.cpp  xerod.cpp
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  process.h  protocol.h
src/kernel/: blockmanager_opts.h  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.h  coinstats.h  context.h  cs_main.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.h  validation_cache_sizes.h  xerokernel.cpp
src/leveldb/: libleveldb.la  libmemenv.la
src/logging/: timer.h
src/minisketch/: README.md
src/node/: blockmanager_args.h  blockstorage.h  caches.h  chainstate.h  chainstatemanager_args.h  coin.h  coins_view_args.h  connection_types.h  context.h  database_args.h  eviction.h  interface_ui.h  interfaces.cpp  mempool_args.h  mempool_persist_args.h  miner.h  minisketchwrapper.h  psbt.h  transaction.cpp  transaction.h  txreconciliation.h  utxo_snapshot.h  validation_cache_args.h
src/policy/: feerate.h  fees.cpp  fees.h  fees_args.h  packages.h  policy.cpp  policy.h  rbf.h  settings.h
src/primitives/: block.h  libxeroconsensus_la-block.lo  libxeroconsensus_la-transaction.lo  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  moc_addresstablemodel.cpp  moc_optionsdialog.cpp  moc_optionsmodel.cpp  moc_overviewpage.cpp  (+87 more)
(+1746 files in other folders)
