dist_man1_MANS=

if BUILD_XEROD
  dist_man1_MANS+=xerod.1
endif

if ENABLE_QT
  dist_man1_MANS+=xero-qt.1
endif

if BUILD_XERO_CLI
  dist_man1_MANS+=xero-cli.1
endif

if BUILD_XERO_TX
  dist_man1_MANS+=xero-tx.1
endif

if BUILD_XERO_UTIL
  dist_man1_MANS+=xero-util.1
endif

if ENABLE_WALLET
if BUILD_XERO_WALLET
  dist_man1_MANS+=xero-wallet.1
endif
endif
